--- a/KeepBinderActive.ipynb
+++ b/KeepBinderActive.ipynb
@@ -9,7 +9,8 @@
     "import time\n",
     "\n",
     "# Function to prevent session timeout by executing code every x minutes\n",
-    "# Make sure to turn this off and keep time intervall as long as possible to avoid being banned from MyBinder\n",
+    "# Make sure to keep time intervall as long as possible and to turn it off \n",
+    "# if not required anymore to avoid being banned from MyBinder\n",
     "def KeepBinderActive(time_lapse = 9, time_out = 60):\n",
     "    time_start = time.time()\n",
     "    while True:\n",
