clear up script

--- a/Python/Examples/getting_started_pangaeapy.ipynb
+++ b/Python/Examples/getting_started_pangaeapy.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "### This script shows an example of searching and downloading multiple files via pangaeapy and how to get information on meta data\n",
     "\n",
-    "#### For more information on pangaeapy: https://github.com/pangaea-data-publisher/pangaeapy\n"
+    "#### For more information and examples on pangaeapy: https://github.com/pangaea-data-publisher/pangaeapy\n"
    ]
   },
   {
@@ -61,6 +61,14 @@
    "source": [
     "# show functions of pangaeapy\n",
     "help(pan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6f43c52",
+   "metadata": {},
+   "source": [
+    "<br/>"
    ]
   },
   {
@@ -207,14 +215,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "436d8831",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b75078cb",
    "metadata": {},
    "outputs": [],
@@ -222,6 +222,14 @@
     "print(type(PAGES1))\n",
     "print(type(PAGES1.result))\n",
     "print(PAGES1.result[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce2af9f9",
+   "metadata": {},
+   "source": [
+    "<br/>"
    ]
   },
   {
@@ -397,12 +405,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5989396d",
+   "cell_type": "markdown",
+   "id": "0c958610",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -454,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath='C:/Users/kriemann/python/pangaeapy/'\n",
+    "datapath='<your_specific_path>'\n",
     "outfile='search_result_PAGES.txt'"
    ]
   },
@@ -477,12 +485,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e096bb6",
+   "cell_type": "markdown",
+   "id": "93dcf897",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -576,35 +584,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath='C:/Users/kriemann/python/pangaeapy/'\n",
+    "datapath='<your_specific_path>'\n",
     "outfile_joey='Joey_core12.txt'\n",
     "\n",
     "Joey_core12.data.to_csv((datapath+outfile_joey),sep='\\t',index=False,header=long_names)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f9a8e19",
+   "cell_type": "markdown",
+   "id": "56843938",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b8da265",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd0aaa0a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -709,20 +701,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5173967",
+   "cell_type": "markdown",
+   "id": "256491d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dff258a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -763,12 +747,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c60d3b89",
+   "cell_type": "markdown",
+   "id": "6fbdc7fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -871,27 +855,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath='C:/Users/kriemann/python/pangaeapy/'\n",
+    "datapath='<your_specific_path>'\n",
     "outfile_sweden='Sweden_geochem.txt'\n",
     "\n",
     "PAGES_Sweden_data.to_csv((datapath+outfile_sweden),sep='\\t',index=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4f314bf",
+   "cell_type": "markdown",
+   "id": "503ccff7",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e89055d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1003,7 +979,7 @@
    "source": [
     "import urllib.request \n",
     "\n",
-    "datapath='C:/Users/kriemann/python/pangaeapy/images/'\n",
+    "datapath='<your_specific_path>'\n",
     "\n",
     "for i, image_name in df_fauna['IMAGE'].iteritems():\n",
     "    print(image_name)\n",
@@ -1011,20 +987,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0e29850",
+   "cell_type": "markdown",
+   "id": "7b1dac48",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6234a02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1100,20 +1068,12 @@
    "source": [
     "import urllib.request \n",
     "\n",
-    "datapath='C:/Users/kriemann/python/pangaeapy/files/'\n",
+    "datapath='<your_specific_path>'\n",
     "\n",
     "for i, file_url in file_list.data['URL file'].iteritems():\n",
     "    print(file_url)\n",
     "    urllib.request.urlretrieve(file_url, (datapath+file_list.data['File name'].iloc[i]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b7fd788",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
