Updates for data curation checklist

--- a/Python/Data_curation_checklist/Data_curation_checklist.ipynb
+++ b/Python/Data_curation_checklist/Data_curation_checklist.ipynb
@@ -19,7 +19,7 @@
         "\n",
         "Version: 0.9.0<br>\n",
         "By: Michael Oellermann, Kathrin Riemann-Campe<br>\n",
-        "Last updated: 2022-11-17\n",
+        "Last updated: 2022-12-02\n",
         "\n",
         "This notebook aims to help you, to check and resolve some common problems and issues with data tables, before submitting them to a data repository like [PANGAEA](https://www.pangaea.de/submit/).\n",
         "\n",
@@ -967,7 +967,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.10.4 ('.venv': venv)",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -985,7 +985,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "28f87940979b24a01c2a9ca56cc5f4513303e776d5d13bf9da1cbc3e736b54ea"
+        "hash": "ab424e4dc2e74cacaae9c1f914107a9f781b476e0d613ee58688e62f3501b19d"
       }
     }
   },
