modified headings in get data notebook

--- a/Python/Get_pangaea_data/get_pangaea_data.ipynb
+++ b/Python/Get_pangaea_data/get_pangaea_data.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +17,7 @@
     "\n",
     "Version: 0.0.2<br>\n",
     "By: Michael Oellermann, Kathrin Riemann-Campe<br>\n",
-    "Last updated: 2023-03-14\n",
+    "Last updated: 2023-05-10\n",
     "\n",
     "This notebook will guide you how to retrieve diverse earth- and environmental data and its metadata from the [PANGAEA data repository](https://www.pangaea.de) using Python. It uses the [PangaeaPy package](https://github.com/pangaea-data-publisher/pangaeapy), to facilitate the data download.\n",
     "\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Pangaeapy\n",
-    "#!pip install pangaeapy # Uncomment to install pangaeapy\n",
+    "!pip install pangaeapy # Uncomment to install pangaeapy\n",
     "import pangaeapy as pan\n",
     "from pangaeapy.pandataset import PanDataSet\n",
     "\n",
@@ -62,7 +63,7 @@
     "from pandas import json_normalize\n",
     "\n",
     "# To access genebank records\n",
-    "#!pip install biopython # To install biopython library\n",
+    "!pip install biopython # To install biopython library\n",
     "from Bio import Entrez\n",
     "from Bio import SeqIO\n",
     "Entrez.email = \"your_email@example.com\""
@@ -242,7 +243,7 @@
    "source": [
     "# Function to query pangaea for datasets\n",
     "# This function overcomes the limit of 500 datasets\n",
-    "def query_pangaea(query_term = \"\", limit = 500, exclude_parents = True):\n",
+    "def query_pangaea(query_term = \"\", limit = 500, exclude_collection = True):\n",
     "    query = pan.PanQuery(query_term, limit = limit)\n",
     "    print(f'{query.totalcount} total query results. Query limited to {limit} results.')\n",
     "\n",
@@ -261,8 +262,8 @@
     "            # Attach further query results\n",
     "            query_results = pd.concat([query_results, pd.DataFrame(query.result)])\n",
     "\n",
-    "    # Exclude parents if true\n",
-    "    if exclude_parents:        \n",
+    "    # Exclude data collection (parents) if true\n",
+    "    if exclude_collection:        \n",
     "        query_results = query_results[query_results.type == \"child\"]\n",
     "        print(f'{len(query_results)} child datasets extracted')\n",
     "\n",
@@ -290,11 +291,12 @@
    "source": [
     "# Perform PANGAEA query\n",
     "query_term = \"citation:author:Herzschuh\"\n",
-    "query_results = query_pangaea(query_term, limit = 50, exclude_parents=True)\n",
+    "query_results = query_pangaea(query_term, limit = 50, exclude_collection=True)\n",
     "query_results.head(2)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -352,7 +354,7 @@
    "source": [
     "# Perform PANGAEA query\n",
     "query_term = \"Deep-sea Sponge Microbiome Project\"\n",
-    "query_results = query_pangaea(query_term, limit = 50, exclude_parents=True)\n",
+    "query_results = query_pangaea(query_term, limit = 50, exclude_collection=True)\n",
     "# Add pangaea dataset ids\n",
     "add_pangaea_id(query_results)\n",
     "query_results.head(2)"
@@ -460,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.2 Download multiple datasets\n",
+    "## 3.2 Download multiple datasets\n",
     "\n",
     "AIM: How can I download multiple datasets right into Python or on my harddrive?"
    ]
@@ -481,7 +483,7 @@
    "source": [
     "# Perform PANGAEA query\n",
     "query_term = \"Deep-sea Sponge Microbiome Project\"\n",
-    "query_results = query_pangaea(query_term, limit = 50, exclude_parents=True)\n",
+    "query_results = query_pangaea(query_term, limit = 50, exclude_collection=True)\n",
     "query_results.head(2)"
    ]
   },
@@ -492,7 +494,7 @@
    "source": [
     "### Download multiple datasets\n",
     "Note: \n",
-    "* Parent and restricted datasets cannot be downloaded"
+    "* Data collections and restricted datasets cannot be downloaded"
    ]
   },
   {
@@ -557,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Get metadata for each dataset"
+    "## 4.1 Get metadata for each dataset"
    ]
   },
   {
@@ -622,7 +624,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Getting metadata for multiple datasets"
+    "## 4.2 Getting metadata for multiple datasets"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2.1 Using Pangaeapy"
    ]
   },
   {
@@ -757,7 +767,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2.2 The WebScraper way\n",
+    "## 4.3 Alternative way to retrieve metadata"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3.1 HTML Scraping\n",
     "* --> To access metadata via direct web scraping\n",
     "* ... and to apply this more generic approach to scrape data from other repositories"
    ]
@@ -805,6 +823,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -862,7 +881,7 @@
    "source": [
     "# Perform PANGAEA query\n",
     "query_term = \"Deep-sea Sponge Microbiome Project\"\n",
-    "query_results = query_pangaea(query_term, limit = 5, exclude_parents=True)\n",
+    "query_results = query_pangaea(query_term, limit = 5, exclude_collection=True)\n",
     "query_results"
    ]
   },
@@ -908,7 +927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3 Save metadata"
+    "#### Save metadata"
    ]
   },
   {
@@ -927,7 +946,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.4 More metadata: Can be extracted from json"
+    "### 4.3.2 Metadata from json"
    ]
   },
   {
