removed hashtag from pip install

--- a/Python/Get_pangaea_data/get_pangaea_data.ipynb
+++ b/Python/Get_pangaea_data/get_pangaea_data.ipynb
@@ -51,7 +51,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Pangaeapy\n",
-    "#!pip install pangaeapy # Uncomment to install pangaeapy\n",
+    "!pip install pangaeapy # Uncomment to install pangaeapy\n",
     "import pangaeapy as pan\n",
     "from pangaeapy.pandataset import PanDataSet\n",
     "\n",
@@ -63,7 +63,7 @@
     "from pandas import json_normalize\n",
     "\n",
     "# To access genebank records\n",
-    "#!pip install biopython # To install biopython library\n",
+    "!pip install biopython # To install biopython library\n",
     "from Bio import Entrez\n",
     "from Bio import SeqIO\n",
     "Entrez.email = \"your_email@example.com\""
