added solutions notebook

--- a/Python/Get_pangaea_data/get_pangaea_data_solutions.ipynb
+++ b/Python/Get_pangaea_data/get_pangaea_data_solutions.ipynb
@@ -362,6 +362,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 2.4.1\n",
+    "query = pan.PanQuery(\"Octopus vulgaris\")\n",
+    "print(f'There have been {query.totalcount} query results')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -376,6 +387,21 @@
    "outputs": [],
    "source": [
     "# Your solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#@title Solution 2.4.2\n",
+    "query = pan.PanQuery(\"citation:gadus morhua\")\n",
+    "print(f'There have been {query.totalcount} query results')"
    ]
   },
   {
@@ -396,6 +422,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 2.4.3\n",
+    "query = pan.PanQuery(\"citation:author:grobe, hannes\")\n",
+    "print(f'There have been {query.totalcount} query results')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -410,6 +447,17 @@
    "outputs": [],
    "source": [
     "# Your solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 2.4.4\n",
+    "query = pan.PanQuery(\"parameter:Temperature, water method:CTD/Rosette\")\n",
+    "print(f'There have been {query.totalcount} query results')"
    ]
   },
   {
@@ -708,6 +756,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 3.3.1\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.947275\")\n",
+    "print(ds.data.head(3))\n",
+    "print(f'The first event name is {ds.data.loc[0][\"Event\"]}')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -726,6 +786,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 3.3.2\n",
+    "# Download and store data table in df\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.943624\")\n",
+    "df = ds.data\n",
+    "# Filter sampling points above 1000m\n",
+    "df_1000 = df[df[\"Elevation\"]>1000]\n",
+    "print(df_1000.head(3))\n",
+    "# Count the number of sampling points\n",
+    "print(f'There are {len(df_1000)} sampling point above 1000m')\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -741,6 +818,28 @@
    "outputs": [],
    "source": [
     "# Your solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 3.3.3\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.943455\")\n",
+    "# Translate to long parameters\n",
+    "get_long_parameters(ds)\n",
+    "print(ds.data.head(3))\n",
+    "\n",
+    "# Plot sampling points on interactive plotly map\n",
+    "fig = px.scatter_mapbox(ds.data, lat=\"LATITUDE\", lon=\"LONGITUDE\", \n",
+    "                        hover_name=\"Event label\", \n",
+    "                        hover_data=['LATITUDE', 'LONGITUDE', 'ELEVATION [m a.s.l.]', 'Genus'], \n",
+    "                        zoom=0, height=300)\n",
+    "fig.update_layout(mapbox_style=\"open-street-map\")\n",
+    "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
+    "fig.show()"
    ]
   },
   {
@@ -1181,6 +1280,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 4.4.1\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.937210\")\n",
+    "ds.title"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1199,6 +1309,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 4.4.2\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.863967\")\n",
+    "ds.date"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1214,6 +1335,22 @@
    "outputs": [],
    "source": [
     "# Your solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solution 4.4.3\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.863975\")\n",
+    "# Spell out abbreviated parameters\n",
+    "get_long_parameters(ds)\n",
+    "# Find all parameters containing temperature\n",
+    "ds.data.columns[ds.data.columns.str.contains(\"temperature\", case=False)]\n",
+    "# OR\n",
+    "ds.data.columns[ds.data.columns.str.contains(\"°C\", case=False)]"
    ]
   },
   {
