--- a/Python/Data_curation_checklist/Data_curation_checklist.ipynb
+++ b/Python/Data_curation_checklist/Data_curation_checklist.ipynb
@@ -17,9 +17,9 @@
       "source": [
         "# **Data Curation Checklist**\n",
         "\n",
-        "Version: 0.9.0<br>\n",
+        "Version: 1.0<br>\n",
         "By: Michael Oellermann, Kathrin Riemann-Campe<br>\n",
-        "Last updated: 2022-12-02\n",
+        "Last updated: 2023-09-14\n",
         "\n",
         "This notebook aims to help you, to check and resolve some common problems and issues with data tables, before submitting them to a data repository like [PANGAEA](https://www.pangaea.de/submit/).\n",
         "\n",
@@ -959,6 +959,27 @@
         "Congratulations! You finished curating your data, which was an important step forward to make your data more accessible, understandable und useable for future users.\n",
         "Now you are ready to submit your data file(s) to [PANGAEA](https://www.pangaea.de/submit/)."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Acknowledgements\n",
+        "\n",
+        "Michael Oellermann/this work was supported by the German Research Foundation DFG under the grant agreement number  442032008 (NFDI4Biodiversity). The project is part of NFDI, the National Research Data Infrastructure Programme in Germany.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![Alt text](NFDI_4_Biodiversity___Logo_Positiv.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
@@ -981,7 +1002,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.11.2"
     },
     "vscode": {
       "interpreter": {
