--- a/Python/Data_curation_checklist/Data_curation_checklist.ipynb
+++ b/Python/Data_curation_checklist/Data_curation_checklist.ipynb
@@ -1000,7 +1000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src="./NFDI_4_Biodiversity___Logo_Positiv.png" width="300">"
+    "![Alt text](NFDI_4_Biodiversity___Logo_Positiv.png)"
    ]
   },
   {
