Reduced N4Bio logo in notebook

--- a/Python/Data_curation_checklist/Data_curation_checklist.ipynb
+++ b/Python/Data_curation_checklist/Data_curation_checklist.ipynb
@@ -993,20 +993,10 @@
    "source": [
     "# Acknowledgements\n",
     "\n",
-    "Michael Oellermann/this work was supported by the German Research Foundation DFG under the grant agreement number  442032008 (NFDI4Biodiversity). The project is part of NFDI, the National Research Data Infrastructure Programme in Germany.\n"
+    "Michael Oellermann/this work was supported by the German Research Foundation DFG under the grant agreement number  442032008 (NFDI4Biodiversity). The project is part of NFDI, the National Research Data Infrastructure Programme in Germany.  \n",
+    "\n",
+    "<img src=\"./NFDI_4_Biodiversity___Logo_Positiv.png\" alt=\"NFDI4Biodiversity Logo\" align=\"left\" width=\"300\">"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Alt text](NFDI_4_Biodiversity___Logo_Positiv.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
