--- a/Python/Examples/getting_started_pangaeapy.ipynb
+++ b/Python/Examples/getting_started_pangaeapy.ipynb
@@ -5,6 +5,7 @@
    "id": "579868a0",
    "metadata": {},
    "source": [
+    "![PANGAEA_Banner.png](https://github.com/pangaea-data-publisher/community-workshop-material/raw/master/banner.png)",
     "# PANGAEApy\n",
     "## Introduction and examples for PANGAEA community workshop 2022"
    ]
