--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -21,7 +21,7 @@
     "This notebook will guide you how to retrieve diverse earth- and environmental data and its metadata from the [PANGAEA data repository](https://www.pangaea.de) using Python. It uses the [PangaeaPy package](https://pypi.org/project/pangaeapy/), to facilitate the data download.\n",
     "\n",
     "Run this notebook in:\n",
-    "* [GoogleColab](https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/PANGAEApy_practical.ipynb): <a target=\"_blank\" href=\"https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/PANGAEApy_practical.ipynb\">\n",
+    "* [GoogleColab](https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/PANGAEApy_practical.ipynb): <a target=\"_blank\" href=\"https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>"
    ]
@@ -1162,17 +1162,20 @@
    },
    "outputs": [],
    "source": [
-    "# query database for project \"PAGES_C-PEAT\" \n",
-    "query = pan.PanQuery(\"project:label:PAGES_C-PEAT\", limit = 500)\n",
+    "# query database for Thermosalinograph data published from 2020 onwards  \n",
     "\n",
     "# Get all results and combine them in data frame.\n",
     "df_all = pd.DataFrame()\n",
+    "\n",
     "# loop over all results in steps of 500\n",
     "for i in np.arange(0,query.totalcount,500):\n",
+    "\n",
     "    # store result of individual step in qs\n",
-    "    qs = pan.PanQuery(\"project:label:PAGES_C-PEAT\", limit = 500, offset=i)\n",
+    "    qs = pan.PanQuery(\"device:thermosalinograph citation:year:202*\", limit = 500, offset=i)\n",
+    "    \n",
     "    # convert qs result with 500 entries to data frame df_qs\n",
     "    df_qs = pd.DataFrame(qs.result)\n",
+    "    \n",
     "    # concatenate all individual df_qs into one data frame named query_results_all\n",
     "    df_all = pd.concat([df_all,df_qs],ignore_index=True)\n",
     "    \n",
@@ -1196,7 +1199,7 @@
     "tags": []
    },
    "source": [
-    "### Download multiple datasets\n",
+    "### Case 1: Download multiple datasets and treat them as individuals\n",
     "Note: \n",
     "* Data collections and restricted datasets cannot be downloaded"
    ]
@@ -1255,7 +1258,7 @@
    },
    "outputs": [],
    "source": [
-    "data_dict['928177'].head()"
+    "data_dict['910965'].head()"
    ]
   },
   {
@@ -1287,7 +1290,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download multiple datasets and store them in 1 data frame"
+    "### Case 2: Download multiple datasets and combine them in 1 data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_all.head()"
    ]
   },
   {
@@ -1300,29 +1314,22 @@
    "source": [
     "# Create one data frame for all datasets\n",
     "data_all = pd.DataFrame()\n",
+    "\n",
     "# Loop over DOIs and download datasets\n",
     "#for pangaea_doi in df_all['URI']:\n",
     "for pangaea_doi in df_all['URI'][0:3]: # loop only over first 3 datasets\n",
     "    print(\"\".join(40*[\"-\"]))\n",
     "    print(f'PANGAEA ID: {pangaea_doi}')\n",
+    "    \n",
     "    # Cache\n",
     "    ds = PanDataSet(pangaea_doi, enable_cache=True)\n",
+    "    \n",
     "    # Translate to long parameter names\n",
     "    get_long_parameters(ds)\n",
     "    print(f'Dataset title: {ds.title}')\n",
     "    #print(ds.data.head(2))\n",
-    "    data_all = pd.concat([data_all,ds.data],ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "data_all.count()"
+    "    #print(data_all.count())\n",
+    "    data_all = pd.concat([data_all,ds.data])#,ignore_index=True)"
    ]
   },
   {
